--- a/p/pa/pay/paynhire.com.html
+++ b/p/pa/pay/paynhire.com.html
@@ -1,19 +1,16 @@
-<!--The following is the downloaded HTML source of the paynhire.com privacy policy that was archived on 2017-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170618011123id_/http%3A//www.paynhire.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paynhire.com privacy policy that was archived on 2017-08-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170817124604id_/https%3A//www.paynhire.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Paynhire</title>
-<link href="/css/bootstrap.min.css" rel="stylesheet">
-<link href="/css/todc-bootstrap.min.css" rel="stylesheet">
-<link href="/css/static-top.css" rel="stylesheet">
-<link href="/css/sticky-footer-navbar.css" rel="stylesheet">
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script src="/js/jquery-3.1.1.min.js.pagespeed.ce.4HGr2o_mEZ.js"></script>
+<link href="/css/bootstrap.min.css+todc-bootstrap.min.css+static-top.css+sticky-footer-navbar.css.pagespeed.cc.oAppaVtNWD.css" rel="stylesheet">
+<script async="" src="https://www.google-analytics.com/analytics.js"></script><script src="/js/jquery-3.1.1.min.js.pagespeed.ce.4HGr2o_mEZ.js"></script>
 <script src="http://www.paynhire.com/js/jquery.geocomplete.js.pagespeed.ce.O8Q6c2yD2P.js"></script>
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -54,7 +51,7 @@
 <ul class="nav navbar-nav navbar-right"><li><a href="/secure/login.php">Login</a></li>
 <li><a href="/secure/signup.php">Create an account</a></li>
 </ul>
-</div><!--/.nav-collapse -->
+</div>
 </div>
 </nav>
 <div class="container">
@@ -96,7 +93,7 @@ Paynhire takes your privacy seriously. Please read the following to learn more a
 <h4 class="color-orange">11. CONTACT INFORMATION</h4>
 <p>Paynhire welcomes feedback regarding this Policy. If at any time you believe that this website has not adhered to this Policy, please contact Paynhire and we will use all commercially reasonable efforts to promptly determine and correct the problem. E-mail should be sent to support@Paynhire.com.</p>
 </div>
-</div> <!-- /container -->
+</div> 
 <div class="container">
 </div>
 <footer class="footer">
@@ -104,10 +101,10 @@ Paynhire takes your privacy seriously. Please read the following to learn more a
 <p class="text-muted">© 2017 Paynhire &nbsp;&nbsp; <span style="float:right"><a href="/contactus.php">Contact Us</a> | <a href="/privacy-policy.php">Privacy</a> | <a href="/terms.php">Terms</a></span></p>
 </div>
 </footer>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCgxK53mozgis0LR2S7X7h5oBUCX6YAdM&amp;libraries=places&amp;callback=initialize" defer=""></script>
 <script src="/js/bootstrap.min.js.pagespeed.ce.WGnJbMjxkI.js"></script>
-<!-- Start of StatCounter Code for Default Guide -->
+
 <script type="text/javascript">
 var sc_project=6082899; 
 var sc_invisible=1; 
@@ -119,8 +116,8 @@ scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script><script async="" type="text/javascript" src="https://secure.statcounter.com/counter/counter.js"></script>
 <noscript><div class="statcounter"><img class="statcounter" src="http://c.statcounter.com/6082899/0/ab1a3b47/1/" alt="web analytics"></div></noscript>
-<!-- End of StatCounter Code for Default Guide -->
-<script>if (window.parent == window) {(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-90742871-1', 'auto', {'siteSpeedSampleRate': 100});ga('send', 'pageview');}</script>
+
+
 
 
 </body></html>
