--- a/h/he/hen/hentaiboys.com.html
+++ b/h/he/hen/hentaiboys.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hentaiboys.com privacy policy that was archived on 2015-08-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20150816003900id_/http%3A//www.hentaiboys.com/html/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hentaiboys.com privacy policy that was archived on 2017-08-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170817155515id_/http%3A//www.hentaiboys.com/html/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><title>Privacy policy</title>
 
@@ -14,7 +14,7 @@
   where personally identifiable information may be requested. </p>
 <p>The Information We Collect: We only keep your name and emailadress for support 
   purpous only</p>
-<p>This notice applies to all information collected or submitted on Basicsense Holdings websites. On some pages, you can order products/subscriptions, make requests, 
+<p>This notice applies to all information collected or submitted on Kamikaze Media websites. On some pages, you can order products/subscriptions, make requests, 
   and register to receive materials. The types of personal information collected 
   at these pages are: </p>
 <p>Name: <br>
@@ -34,7 +34,7 @@
   verify your identity before granting access or making corrections. </p>
 <p>How To Contact Us: </p>
 <p>Should you have other questions or concerns about these privacy policies, please 
-  send us an email at webmaster@basicsenseholdings.com</p>
+  send us an email at webmaster@kamikazemedia.com</p>
 
 
 </body></html>
