--- a/n/nc/ncd/ncdor.gov.html
+++ b/n/nc/ncd/ncdor.gov.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the ncdor.gov privacy policy that was archived on 2017-04-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170428011818id_/http%3A//www.ncdor.gov/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ncdor.gov privacy policy that was archived on 2017-08-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170818052425id_/https%3A//ncdor.gov/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>NCDOR Privacy Policy</title>
-<script type="text/javascript" src="dtagent61_n_8433.js" data-dtconfig="rid=RID_-2026190669|rpid=-718185163|domain=ncdor.gov|tp=500,50,0|doNotInstrument=clk|reportUrl=dynaTraceMonitor"></script><link href="/css/main.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="dtagent_ICA_6000500221006.js" data-dtconfig="rid=RID_-2026190669|rpid=1193193795|domain=ncdor.gov|tp=500,50,0|doNotInstrument=clk|lab=1|reportUrl=dynaTraceMonitor|agentUri=dtagent_ICA_6000500221006.js"></script><link href="/css/main.css" rel="stylesheet" type="text/css">
 <link href="/css/navigation.css" rel="stylesheet" type="text/css">
 <link href="/css/print.css" type="text/css" rel="stylesheet" media="print">
 <script type="text/javascript" src="/css/navigation.js"></script>
@@ -204,7 +204,7 @@
 					  <h3>Information</h3>
 					  <ul>
                         <li><a href="/collect/index.html">Collections – Past Due Taxes </a></li>
-					    <li><a href="/rulesreview/index.html">Periodic Review of Existing Rules </a></li>
+					    <li><a href="/rulesreview/index.html">Periodic Review of Existing Rules</a></li>
 					    <li><a href="/publications/index.html">Reports and Statistics </a></li>
 					    <li><a href="/practitioner/appeals/disputes.html">Resolving Disputes</a></li>
 				      </ul>
@@ -213,6 +213,7 @@
                         <li><a href="/individual/identitytheft.html">Identity Theft </a></li>
 					    <li><a href="/individual/taxestimator.html">Individual Income Tax Estimator</a></li>
 					    <li><a href="/taxes/individual/taxrates.html">Individual Income Tax Rates</a></li>
+					    <li><a href="/taxes/sales/impnotice031717_cmirmi.pdf">Sales and Use Taxes for Real Property Transactions and Services</a></li>
 					    <li><a href="/taxes/sales/taxrates.html">Sales and Use Tax Rates</a></li>
 					    <li><a href="/practitioner/taxpayer_advocate/index.html">Taxpayer Advocate</a></li>
 					    <li><a href="/aboutus/education/index.html">Taxpayer Self-Help</a></li>
