--- a/f/fi/fil/filecluster.com.html
+++ b/f/fi/fil/filecluster.com.html
@@ -1,24 +1,29 @@
-<!--The following is the downloaded HTML source of the filecluster.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606155836id_/http%3A//www.filecluster.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the filecluster.com privacy policy that was archived on 2017-08-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170818080339id_/https%3A//filecluster.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy</title>
 <meta name="description" content="Privacy Policy">
-<meta name="keywords" content="downloads, software, programs, shareware, windows, drivers, free software, files, utilities, iphone, applications, apps, ipad, downloadable">
-<meta name="ROBOTS" content="INDEX, FOLLOW">
-<meta name="author" content="FileCluster">
+<meta name="robots" content="INDEX, FOLLOW">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/js/jquery-1.11.2.min.js" type="text/javascript"></script>
 <link rel="stylesheet" href="/css/style.css">
 <link rel="stylesheet" href="/css/responsive.css">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta property="og:title" content="Your free software downloads source - FileCluster">
+<meta property="og:description" content="Your free software downloads archive. Download the latest software, drivers and games for Windows, Mac, iPhone/iPad, Linux and Mobile">
+<meta property="og:image" content="http://files.filecluster.com/images/fc_screen.jpg">
+<meta property="og:url" content="">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="FileCluster">
+<meta property="fb:app_id" content="473486035432">
 
 <link rel="alternate" type="application/rss+xml" href="http://feeds.feedburner.com/filecluster">
 
 
-<script type="text/javascript" async="" src="//static.getclicky.com/js"></script><link rel="stylesheet" type="text/css" href="//web.archive.org/web/20160401205557/http://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/light-floating.css"></head>
+<script type="text/javascript" async="" src="//static.getclicky.com/js"></script></head>
 
-<body><div class="cc_banner-wrapper "><div class="cc_banner cc_container cc_container--open"><a href="#null" data-cc-event="click:dismiss" class="cc_btn cc_btn_accept_all">Got it!</a><p class="cc_message">This website uses cookies to ensure you get the best experience on our website <a data-cc-if="options.link" class="cc_more_info" href="http://www.filecluster.com/privacy.html">More info</a></p></div></div>
+<body>
 	<div class="main">
     	<div class="header">
         	<a href="/" class="logo"><img src="/images/logo_filecluster.png" width="212" height="76" alt="FileCluster - Download free software and games"></a>
@@ -50,12 +55,7 @@
 	            	<div class="bgT"></div>
 	                <div class="content">
 	                    <div class="mid">
-	                    	<strong>Login</strong>
-	                    	<form action="/login.html" method="post">
-	                        	<input type="text" class="textfield" name="login" value="username" onblur="if('' == this.value)this.value='username'" onclick="if('username' == this.value)this.value=''">
-	                            <input type="password" class="textfield" name="password" value="password" onblur="if('' == this.value)this.value='password'" onclick="if('password' == this.value)this.value=''">
-	                            <input type="submit" value="login" class="bRegister">
-	                        </form>
+	                    	<a href="/login.html"><strong>Login</strong></a>
 	                    </div>
 	                    <div class="extra"><a href="/register.html">Register</a><br><a href="/passwordforget.html">Forgot password?</a></div>
 	                    <div class="clear"></div>
@@ -68,8 +68,8 @@
 					<a href="/Drivers/">Drivers</a>
 					<a href="/most-popular.html">Top 50</a>
                   </div>
-				<div class="forum"><a href="/reviews/">Reviews</a></div>
-				<div class="submit"><a href="/submit-software.html">Submit</a></div>                          
+				<div class="forum"><a href="/howto/reviews/">Reviews</a></div>
+				<div class="submit"><a href="/submit-software-normal.html">Submit</a></div>                          
                 <div class="clear"></div>
             </div>
             <div class="under">
@@ -95,7 +95,7 @@
                 </div>
             </div>
         </div>	<div class="container">
-	    				<div class="breadcrumb"><a href="/">Home</a> » <b>Privacy Policy</b></div>
+	    				<div class="breadcrumb"><b>Privacy Policy</b></div>
 	        		<div class="rContent">
 							<div class="col3">
 		<div class="fcbox top">
@@ -205,6 +205,42 @@
 		
 				
 				
+		
+						<div class="box2 reviews  mobile-sidebar-hide">
+		<strong class="titlu">Latest Guides</strong>
+					<div class="howzy">
+				<a href="http://www.filecluster.com/howto/install-only-the-driver-for-nvidia-graphics-cards/" class="rt">[Guide] Install the driver only for nVidia graphics cards</a>
+				<div class="clear"></div>
+			</div>
+					<div class="howzy">
+				<a href="http://www.filecluster.com/howto/sort-data-rows-excel/" class="rt">How To Sort Data in Rows in Excel</a>
+				<div class="clear"></div>
+			</div>
+					<div class="howzy">
+				<a href="http://www.filecluster.com/howto/guide-remap-mouse-scroll-wheel-click-function/" class="rt">How To Remap Your Mouse Scroll Wheel Click Function</a>
+				<div class="clear"></div>
+			</div>
+					<div class="howzy">
+				<a href="http://www.filecluster.com/howto/hide-personal-information-image-ios/" class="rt">Hide your personal information from an image in iOS</a>
+				<div class="clear"></div>
+			</div>
+					<div class="howzy">
+				<a href="http://www.filecluster.com/howto/make-windows-10-look-like-win-xp-7-8/" class="rt">Make Your Windows 10 Look Like Win XP, 7 or 8</a>
+				<div class="clear"></div>
+			</div>
+					<div class="howzy">
+				<a href="http://www.filecluster.com/howto/windows-10-antimalware-service-executable/" class="rt">What Is Windows 10 Antimalware Service Executable?</a>
+				<div class="clear"></div>
+			</div>
+					<div class="howzy">
+				<a href="http://www.filecluster.com/howto/top-5-browsers-ios/" class="rt">Top 5 Browsers for iOS</a>
+				<div class="clear"></div>
+			</div>
+					<div class="howzy">
+				<a href="http://www.filecluster.com/howto/block-access-internet-win-10-services/" class="rt">Block Access to the Internet for Win 10 Services</a>
+				<div class="clear"></div>
+			</div>
+			</div>
 		</div>		<div class="clear"></div>
 	</div>
 	</div>
@@ -214,18 +250,17 @@
 	            	<div class="mainCat">
 
 	                    <a href="/Drivers/">Drivers</a>
-			    <a href="/reviews/">Reviews</a>
+			    <a href="/howto/reviews/">Reviews</a>
 			    <a href="/howto/">How To</a>
 	                </div>
 	                <div class="clear"></div>
 	                <div class="cat">
 	                    <a href="/Drivers/">Get Drivers</a>           
-	                    <a href="/reviews/">Software Reviews</a>
+	                    <a href="/howto/reviews/">Software Reviews</a>
 	                </div>
 	                <div class="cat">
 	                    <a href="/new-releases.html">New Software</a>    
 	                    <a href="/most-popular.html">Top 50 Downloads</a>     
-	                    <a href="/popularsearches/">Popular Searches</a>
 	                </div>			
                      <div class="activity">
 	                	 <ul>
@@ -294,12 +329,6 @@ clicky_site_ids.push(204114);
 
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=vexxy"></script>
-
-<script type="text/javascript">
-    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"http://www.filecluster.com/privacy.html","theme":"light-floating"};
-</script>
-
-<script type="text/javascript" src="/cookie-consent/cookieconsent.min.js"></script>
 
 
 
