--- a/f/fi/fin/find-near-me.info.html
+++ b/f/fi/fin/find-near-me.info.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the find-near-me.info privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606030559id_/http%3A//www.find-near-me.info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the find-near-me.info privacy policy that was archived on 2017-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170819070012id_/http%3A//find-near-me.info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
         <meta charset="utf-8">
@@ -80,7 +80,7 @@
 
 <p>It is Find Places Near Me's policy to respect your privacy regarding any information we may collect while operating our website.</p>
 
-<p>If you have questions about accessing or correcting your personal data please send an email to <script>var safe_email_offset = 5;</script><a rel="nofollow" class="safe_email" href="7igl12i@359y-7xs8-2t.w0rz">7igl12i@359y-7xs8-2t.w0rz</a>.</p>
+<p>If you have questions about accessing or correcting your personal data please send an email to <script>var safe_email_offset = 4;</script><a rel="nofollow" class="safe_email" href="8jhm23j@46az-8yt9-3u.x1s0">8jhm23j@46az-8yt9-3u.x1s0</a>.</p>
 
 <h2>Website Visitors</h2>
 <p>Like most website operators, Find Places Near Me collects non-personally-identifying information of the sort that web browsers and servers typically make available, such as the browser type, language preference, referring site, and the date and time of each visitor request. Find Places Near Me's purpose in collecting non-personally identifying information is to better understand how Find Places Near Me's visitors use Find Places Near Me. From time to time, Find Places Near Me may release non-personally-identifying information in the aggregate, e.g., by publishing a report on trends in the usage of its website.</p>
