--- a/f/fa/fam/familysurvivalsystem.com.html
+++ b/f/fa/fam/familysurvivalsystem.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the familysurvivalsystem.com privacy policy that was archived on 2017-01-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170112143848id_/http%3A//familysurvivalsystem.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the familysurvivalsystem.com privacy policy that was archived on 2017-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170819071603id_/http%3A//www.familysurvivalsystem.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -53,7 +53,7 @@
 <a href="terms.html">Terms &amp; Conditions</a> | <a href="">Privacy</a> | <a href="mailto: support@familysurvivalsystemsupport.com?subject=Support%20Request">Support</a>
 </p><p>&nbsp;</p>
     <p>Copyright 2013 FamilySurvivalSystem.com All Rights Reserved </p>
-</div><script type="text/javascript">/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
+</div><script>/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/\>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
 
 
 
