--- a/t/te/tee/teengfs.com.html
+++ b/t/te/tee/teengfs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the teengfs.com privacy policy that was archived on 2017-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170616192319id_/http%3A//www.teengfs.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the teengfs.com privacy policy that was archived on 2017-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170819081246id_/http%3A//www.teengfs.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
     <meta charset="utf-8">
@@ -35,7 +35,7 @@
       <h4>Acceptance of these Terms</h4>
       <p>By visiting or subscribing to this Site, you agree to the practices described in this Privacy Policy. We may at any time revise or amend any of these terms and conditions. You are bound by any such revisions and should therefore periodically visit this page to review the then-current terms and conditions to which you are bound. To the extent that any of the third-party sites accessible through our Site (such as our advertisers) have different privacy practices from those stated in this Privacy Policy, those third-party privacy practices govern the collection and use of information you provide when visiting those sites. We are not responsible for the policies, content, and practices of other companies which may collect personal information as a third-party web service provider that has an advertising banner or link on the Site.</p>
 
-      <p></p><center><img src="/assets/images/corp.gif"></center><p></p>
+      <p></p><center><img src="/assets/images/whalemember.png"></center><p></p>
     </div>
   
 
