--- a/d/di/dis/diskonio.com.html
+++ b/d/di/dis/diskonio.com.html
@@ -1,15 +1,10 @@
-<!--The following is the downloaded HTML source of the diskonio.com privacy policy that was archived on 2017-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170618192616id_/http%3A//www.diskonio.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the diskonio.com privacy policy that was archived on 2017-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170819170546id_/http%3A//www.diskonio.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Privacy Policy for Diskonio</title>
-<script type="text/javascript" async="" src="//cdn.viglink.com/api/vglnk.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script async="" src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js"></script><script type="text/javascript">
-//<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"02926d43f3b452b4574685769cecf100",petok:"5729e4189b8358bcec3b344917b2e762cee62555-1497813976-1800",zone:"diskonio.com",rocket:"0",apps:{"vig_key":{"sid":"991ee8fe2e8e7462d991ff267f118965"}}}];!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=85b614c0f6/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
-//]]>
-</script>
 <link rel="shortcut icon" class="eg_link" href="/css/impactloud.ico" type="image/x-icon">
 <link rel="alternate" type="application/rss+xml" title="Diskonio Great Coupons RSS" href="http://www.diskonio.com/feed/">
 <meta name="description" content="Privacy Policy for Diskonio. Save Money With Diskonio Coupons &amp; Promo Codes">
@@ -26,16 +21,16 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
 <link href="/css/custom.css" rel="stylesheet" media="screen">
 <link href="/css/style01.css" rel="stylesheet" media="screen">
 <link href="/css/plugins/animo/animate+animo.css" rel="stylesheet" media="screen">
- 
+
 <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
     <![endif]-->
- 
+
 <link href="http://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:700,400,300,300italic" rel="stylesheet" type="text/css">
- 
-<script src="/js/jquery.v2.0.3.js"></script>
+
+<script type="text/javascript" async="" src="//cdn.viglink.com/api/vglnk.js"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script src="/js/jquery.v2.0.3.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -207,8 +202,8 @@ All Rights Reserved </span>
 </div>
 </div>
 </div>
-</div> 
- 
+</div>
+
 <script type="text/javascript">
 	  var vglnk = { key: '88a8a93507525e5e0804e17521b849ef' };
 	  (function(d, t) {
