--- a/v/vi/vis/visualping.io.html
+++ b/v/vi/vis/visualping.io.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the visualping.io privacy policy that was archived on 2017-05-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170519084458id_/https%3A//visualping.io/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the visualping.io privacy policy that was archived on 2017-08-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170819185159id_/https%3A//visualping.io/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="mod mod-layout skin-layout-login"><head>
     
@@ -20,7 +20,7 @@
 <meta name="twitter:domain" content="visualping.io">
 
 <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://cdn.visualping.io/app.css?v=8380b8eb" type="text/css">
+    <link rel="stylesheet" href="https://cdn.visualping.io/app.css?v=a922e35f" type="text/css">
 
 
 <meta name="viewport" content="width=768">
@@ -315,6 +315,9 @@
     {{?}}
 </li>
 
+</script><script id="mod-block-accountsettings-general-summary" type="text/x-dot-template">
+<p class="title">Weekly summary</p>
+<label class="input-email-summary"><input class="js-fld-email-summary" type="checkbox" {{?it.summary}}checked{{?}}>&nbsp&nbspSend weekly email summary of all jobs</input></label>
 </script><script id="mod-block-adminjoblisting-elem-adminjoblisting-change" type="text/x-dot-template">
 <tr>
     <td class="col-change-date">
@@ -475,7 +478,47 @@
     {{?}}
 </div>
 
-</script><script id="mod-block-monitorbuilder-selector-overlay" type="text/x-dot-template">
+</script><script id="mod-block-advancedsettings-tab-falsealarms-doublecheck" type="text/x-dot-template">
+<p class="title">Double check</p>
+<label class="input-multicheck input-checkbox"><input type="checkbox" class="js-fld-multicheck"{{?it.multicheck_enabled}}checked{{?}} >&nbsp&nbspTake a second snapshot before sending me an alert</input></label>
+</script><script id="mod-block-advancedsettings-tab-falsealarms-proxy" type="text/x-dot-template">
+<p class="title">Connection</p>
+<label class="input-checkbox"><input type="checkbox" class="js-fld-proxy" {{? it.use_proxy}}checked{{?}}>&nbsp&nbspuse a US location Proxy Server</input></label></script><script id="mod-block-advancedsettings-tab-falsealarms-waittime" type="text/x-dot-template">
+
+{{ var text = '';
+if(it.wait_time == 1) {
+    text = 'Wait ' + it.wait_time + ' second after loading';
+} else if(it.wait_time > 1) {
+    text = 'Wait ' + it.wait_time + ' seconds after loading';
+} else if (it.wait_time == 0){
+    text = 'Take snapshot immediately';
+} else {
+    text = 'Wait 2 seconds after loading';
+}
+}}
+<p class="title">Wait a specific time before taking the snapshot after the page has fully loaded</p>
+
+<div class="fld-dropdown fld-waittime">
+    <div class="selected cf">
+        <span>{{= text}}</span>
+        <i class="fa fa-check-circle"></i>
+        <i class="fa fa-chevron-down"></i>
+    </div>
+    <ul>
+        <li data-waittime="0">Take snapshot immediately</li>
+        <li data-waittime="1">Wait 1 second after loading</li>
+        <li data-waittime="2">Wait 2 seconds after loading</li>
+        <li data-waittime="3">Wait 3 seconds after loading</li>
+        <li data-waittime="4">Wait 4 seconds after loading</li>
+        <li data-waittime="5">Wait 5 seconds after loading</li>
+    </ul>
+</div></script><script id="mod-block-advancedsettings-tab-falsealarms" type="text/x-dot-template">
+
+<div class="item item-wrapper item-first">{{= it.tpl.render('mod-block-advancedsettings-tab-falsealarms-doublecheck', it)}}</div>
+<div class="item item-wrapper">{{= it.tpl.render('mod-block-advancedsettings-tab-falsealarms-proxy', it)}}</div>
+{{?it.mode == 'VISUAL'}}
+    <div class="item item-wrapper">{{= it.tpl.render('mod-block-advancedsettings-tab-falsealarms-waittime', it)}}</div>
+{{?}}</script><script id="mod-block-monitorbuilder-selector-overlay" type="text/x-dot-template">
 <div class="preview-overlay__item" style="top: {{=it.data.top}}px;left:{{=it.data.left}}px;height:{{=it.data.height}}px;width:{{=it.data.width}}px;z-index:{{=it.data.zindex}};line-height:{{=it.data.height}}px" data-xpath="{{=it.data.xpath}}" 
 data-top="{{=it.coordinates.top}}"
 data-left="{{=it.coordinates.left}}"
@@ -488,7 +531,7 @@ data-key="{{=it.data.key}}"
 >
     <i class="fa fa-plus-circle preview-overlay__icon js-preview-overlay__icon state-disabled"></i>
 </div></script>
-  <script src="https://cdn.visualping.io/app.js?v=8380b8eb"></script>
+  <script src="https://cdn.visualping.io/app.js?v=a922e35f"></script>
 <script>
 (function($) {
     $(document).ready(function() {
