--- a/t/ta/tas/tastereports.com.html
+++ b/t/ta/tas/tastereports.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tastereports.com privacy policy that was archived on 2017-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170620213736id_/http%3A//www.tastereports.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tastereports.com privacy policy that was archived on 2017-08-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170820125119id_/http%3A//tastereports.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><title>Taste Reports - Privacy Policy</title>
@@ -86,5 +86,5 @@
   | <a href="sitemap.html">Site Map</a> | <a href="suggest.html">Suggest Feature</a><br>
   <br>
   <font color="#CCCCCC" size="1">Server time 
-  2017-06-20 16:14:12  </font></div>
+  2017-08-20 07:27:13  </font></div>
 </body></html>
